# donation-hub

./: .gitignore  docker-compose.dev.yml  docker-compose.yml  readme.md
api/: Cargo.toml  Dockerfile
api/.sqlx/: query-059887c24ce0eb5b22869b03a92a57a68d7de06a95b7fa6c793c1063118594de.json  query-0b420884fa3e67c9c900afabfa591573f7c60c6b856efc3bc0d36e8f5dbd7373.json  query-1d111192d585c4c9bc6d83b4a51da0c540ee57b5f3a25795b97e59ef86e46595.json  query-31e76fdc811ad867c833c7049c477942db60a40ceebeae63ea08334c9202b40c.json  query-3ee9af38aea1afd32576b92b8171ca831b100d5829076def2d7424e99605df12.json  query-474b99b45625a69db0ce5244cfb766b641941e00959577b50b9f5342ae13bd99.json  query-4e8dd88dd4de448ae21ed57ef7f1114daad296519607c13613f109febbb2a937.json  query-8155fa9feedb38450ee2aab3d9592df834d56753e4ff11ba2b2977b933d47684.json  query-8c74e31498da0205c593d7c84a635dc5158f1510e72fb5ef58cb755268665383.json  query-979e7baa66f6866bf62e5c9d7b3f631310b1bce90da0edd9dd9799829c98dc85.json  query-bce1711929d25c0d41f887f6f7c8191b37df4ca9a0b4a05d593c91ff4a45472b.json  query-c76fdf4ad4f6452300ce11af9773885ec9ee4068f6e6b08696b3b4ca59413018.json  query-ce42dbb82b0a165b65b50ecafc5d7e4c7704797c0a2938debb8c6d97d2d4ce25.json  query-dee458590077b3f54760274e40910a53beffbf566602e6dfdf635f7ef70c873e.json
api/migrations/: 20240712015322_create_donations_table.down.sql  20240712015322_create_donations_table.up.sql
api/src/: amqp.rs  error.rs  hdwallet.rs  main.rs  models.rs  state.rs  transaction.rs
collector/: Cargo.toml  Dockerfile
collector/src/: blockchain.rs  main.rs
transactions/: Cargo.toml  Dockerfile
transactions/.sqlx/: query-2dbb8e60195d8593737116d09bc376fb0345c3f2074bb42443dda6e121096599.json  (+2 more)
(+7 files in other folders)
