[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
reqwest = "0.12.5"
tokio = { version = "1.38.0", features = ["full"] }
axum = "0.7.5"
sqlx = { version = "0.7.4", features = [ "postgres", "runtime-tokio-native-tls", "migrate", "uuid", "rust_decimal"] }
validator = { version = "0.18.1", features = ["derive"] }
tower-http = { version = "0.5.2", features = ["trace"] }
serde_json = "1.0.120"
thiserror = "1.0.62"
uuid = { version = "1.10.0", features = ["v4"] }
serde_with = "3.8.3"
log = "0.4.22"
env_logger = "0.11.3"
