[package]
name = "collector"
version = "0.1.0"
edition = "2021"

[dependencies]
amqprs = "1.6.3"
tokio = { version = "1.38.1", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
async-trait = "0.1.81"
log = "0.4.22"
serde_json = "1.0.120"
uuid = { version = "1.10.0", features = ["v4"] }
serde = { version = "1.0.204", features = ["derive"] }
redis = { version = "0.25.4", features = ["tokio-comp"] }
