[package]
name = "transactions"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
rust_decimal = "1.35.0"
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.7.4", features = [ "postgres", "runtime-tokio-native-tls", "migrate", "rust_decimal", "time" ] }
tokio = { version = "1.39.1", features = ["full"] }
chrono = "0.4.38"
log = "0.4.22"
env_logger = "0.11.5"
tower-http = { version = "0.5.2", features = ["trace"] }
thiserror = "1.0.63"
serde_json = "1.0.120"
